layout changes, minor css effects

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <header>
         <nav>
             <ul>
-                <li class="item"><span><a href="#classes" title="Courses section">Cursos</a></span></li>
-                <li class="logo"><span><a href="#about"
-                            title="Main section">Jesús<br><strong>Rebollar</strong></a></span>
+                <li class="item"><a href="#classes" title="Courses section">Cursos</a></li>
+                <li class="logo"><a href="#about" title="Main section">Jesús<br><strong>Rebollar</strong></a>
                 </li>
-                <li class="item"><span><a href="#contact" title="Contact section">Contacto</a></span></li>
+                <li class="item"><a href="#contact" title="Contact section">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +27,7 @@
     <section id="home" class="hero">
         <h1>Convierte los videojuegos <br /> en herramientas de aprendizaje</h1>
         <div id="avatar">
-            <img src="./images/mascot.svg" class="svg"
+            <img src="./images/ad-primer grado.png" class="svg"
                 alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
         </div>
         <p><strong>Clases personalizadas de programación</strong> para niños de 8 a 12 años, usando los videojuegos más
@@ -84,8 +83,7 @@
 
     <section id="contact">
         <div id="avatar">
-            <img src="./images/ad-primer grado.png" class="svg"
-            alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
+
         </div>
         <h2>Contacto</h2>
         <p>Si tienes alguna pregunta o deseas inscribir a tus hijos en nuestros cursos de programación, contáctanos.
@@ -95,6 +93,13 @@
             href="mailto:jjesusrebollar@hotmail.com?Subject=Me%20interesan%20las%20clases%20de%20programación&body=Hola,%20me%20interesan%20las%20clases%20de%20programación%20que%20ofrece,%20quisiera%20que%20me%20mande%20más%20información%20a%20este%20correo%20o%20al%20teléfono%20%3Cinserte%20número%20de%20contacto%3E.%20Gracias.">
             Enviar un correo
         </a>
+        <div class="avatar">
+
+            <a href="https://jesusrebollar.com">
+                <img src="./images/mascot.svg" class="svg mt-2"
+                    alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
+            </a>
+        </div>
 
         <!-- <p> -->
         <!-- JJesusRebollar@hotmail.com -->
@@ -116,7 +121,7 @@
 
 
     <footer>
-        <p>&copy; 2023 Jesus Rebollar. Todos los derechos reservados.</p>
+        <p>Coded by Rebjai. 2023</p>
         <!-- Add social media links or other footer content as needed -->
     </footer>
 </body>
