image size bugfix

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </a>
         <div class="avatar">
 
-            <a href="https://jesusrebollar.com">
-                <img src="./images/mascot.svg" class="svg mt-2"
+            <a href="https://jesusrebollar.com" >
+                <img src="./images/mascot.svg" class=""
                     alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
             </a>
         </div>
