--- a/index.html
+++ b/index.html
@@ -72,9 +72,22 @@
         </div>
         <p>Clases disponibles (horas aproximadas):</p>
         <ul>
-            <li>Introducción a la programación con Scratch (~10h)</li>
-            <li>Introducción a la programación con Minecraft (~10h)</li>
-            <li>Desarrollo de juegos en Roblox (~12h)</li>
+            <li>
+                <a href="./curriculum/intro-to-programming.html" target="_blank">
+                    Introducción a la programación con Scratch (~10h)
+                </a>
+            </li>
+            <li>
+                <a href="./curriculum/game-programming.html" target="_blank">
+                    Desarrollo de juegos en Roblox (~12h)
+                </a>
+            </li>
+            <li>
+                <a href="./curriculum/3d-game-development.html" target="_blank">
+
+                    Desarrollo de juegos 3d con Godot (~12h)
+                </a>
+            </li>
         </ul>
         <p>Contáctanos hoy mismo para obtener más información y brindarles a tus hijos una experiencia de aprendizaje
             única y divertida desde la comodidad de su hogar.</p>
@@ -95,7 +108,7 @@
         </a>
         <div class="avatar">
 
-            <a href="https://jesusrebollar.com" >
+            <a href="https://jesusrebollar.com">
                 <img src="./images/mascot.svg" class=""
                     alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
             </a>
