--- a/curriculum/3d-game-development.html
+++ b/curriculum/3d-game-development.html
@@ -21,8 +21,8 @@
   <h3>1. Introducción a Godot y Diseño del Juego de Plataformas en 3D (2 horas)</h3>
   <ul>
     <li>Visión general de Godot y sus características para juegos de plataformas en 3D</li>
-    <li>Identificación y definición del concepto del juego de plataformas en 3D</li>
-    <li>Diseño del entorno y los elementos del juego de plataformas en 3D</li>
+    <li>Identificación y definición del concepto del juego</li>
+    <li>Diseño del entorno y los elementos del juego</li>
     <li>Creación de una estructura básica del proyecto en Godot</li>
   </ul>
   
@@ -34,7 +34,7 @@
     <li>Implementación de iluminación y efectos visuales</li>
   </ul>
   
-  <h3>3. Programación de Movimientos de Personajes en Tercera Persona (4 horas)</h3>
+  <h3>3. Programación de Movimientos de Personajes (4 horas)</h3>
   <ul>
     <li>Creación de un personaje jugable en tercera persona</li>
     <li>Implementación de movimientos básicos, como correr y saltar</li>
@@ -42,12 +42,12 @@
     <li>Programación de interacciones con el entorno, como agarre de bordes o activación de interruptores</li>
   </ul>
   
-  <h3>4. Implementación de Mecánicas de Juego y Diseño de Niveles Desafiantes (2 horas)</h3>
+  <h3>4. Implementación de Mecánicas de Juego y Diseño de Niveles Desafiantes (4 horas)</h3>
   <ul>
     <li>Implementación de mecánicas adicionales, como recolección de objetos o ataques</li>
     <li>Diseño de niveles desafiantes con plataformas móviles, trampas y acertijos</li>
     <li>Ajuste de la dificultad y la progresión del juego</li>
-    <li>Pruebas y ajustes finales del juego de plataformas en tercera persona en 3D</li>
+    <li>Pruebas y ajustes finales del juego/li>
   </ul>
 </body>
 </html>
