--- a/curriculum/game-programming.html
+++ b/curriculum/game-programming.html
@@ -13,7 +13,7 @@
   
   <h2>Descripción de la Clase</h2>
   <p>
-    Esta clase introduce a los estudiantes al emocionante mundo del desarrollo de juegos con Roblox. Aprenderán a utilizar Roblox Studio, la herramienta de creación de juegos de Roblox, y el lenguaje de programación Lua para crear y personalizar sus propios juegos. Los estudiantes podrán construir entornos de juego, diseñar mecánicas de juego, y compartir sus creaciones con otros jugadores en la plataforma de Roblox.
+    Esta clase introduce a los estudiantes al emocionante mundo del desarrollo de juegos con Roblox. Aprenderán a utilizar Roblox Studio, la herramienta de creación de juegos de Roblox, y el lenguaje de programación Lua para crear y personalizar sus propios juegos. Los estudiantes podrán construir entornos de juego, diseñar mecánicas de juego, y compartir sus creaciones con otros jugadores en la plataforma de Roblox, sacandole provecho a sus hobies.
   </p>
   
   <h2>Plan de Estudios</h2>
