modiffied hours for plans

--- a/curriculum/game-programming.html
+++ b/curriculum/game-programming.html
@@ -6,9 +6,9 @@
 <body>
   <h1>Desarrollo de Juegos con Roblox</h1>
   
-  <h2>Detalles de la Clase</h2>
+  <h2>Detalles de la clase</h2>
   <ul>
-    <li>Duración: 10 horas</li>
+    <li>Duración: 17 horas</li>
   </ul>
   
   <h2>Descripción de la Clase</h2>
@@ -18,7 +18,7 @@
   
   <h2>Plan de Estudios</h2>
   
-  <h3>1. Introducción a Roblox Studio (2 horas)</h3>
+  <h3>1. Introducción a Roblox Studio (3 horas)</h3>
   <ul>
     <li>Visión general de la interfaz y características de Roblox Studio</li>
     <li>Comprensión de los elementos básicos (partes, scripts, etc.)</li>
@@ -34,7 +34,7 @@
     <li>Creación de elementos interactivos en el entorno</li>
   </ul>
   
-  <h3>3. Programación en Roblox (2 horas)</h3>
+  <h3>3. Programación en Roblox (4 horas)</h3>
   <ul>
     <li>Introducción a la programación con Lua en Roblox</li>
     <li>Conceptos básicos de programación en Lua (variables, condicionales, bucles)</li>
@@ -42,7 +42,7 @@
     <li>Depuración y prueba de scripts en Roblox</li>
   </ul>
   
-  <h3>4. Mecánicas de Juego e Interacciones (2 horas)</h3>
+  <h3>4. Mecánicas de Juego e Interacciones (4 horas)</h3>
   <ul>
     <li>Diseño e implementación de mecánicas de juego (por ejemplo, movimiento del jugador, detección de colisiones)</li>
     <li>Creación de elementos interactivos (por ejemplo, botones, interruptores, puertas)</li>
@@ -50,7 +50,7 @@
     <li>Pruebas y mejora de las mecánicas de juego</li>
   </ul>
   
-  <h3>5. Desarrollo Avanzado de Juegos (2 horas)</h3>
+  <h3>5. Desarrollo Avanzado de Juegos (4 horas)</h3>
   <ul>
     <li>Exploración de funciones y técnicas avanzadas de Roblox</li>
     <li>Implementación de efectos visuales y sonoros en el juego</li>
