poslishing messages and ui

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     <section id="home" class="hero">
         <h1>Convierte los videojuegos <br /> en herramientas de aprendizaje</h1>
         <div id="avatar">
-            <img src="./images/ad-primer grado.png" class="svg"
+            <a href="#about">
+                <img src="./images/ad-primer grado.png" class="svg"
                 alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
+            </a>
         </div>
-        <p><strong>Clases personalizadas de programación</strong> para niños de 8 a 12 años, usando los videojuegos más
-            populares como medio de enseñanza de las bases de programación.</p>
+        <p><strong>¡Clases de programación en línea a medida</strong> para niños de 8 a 12 años! Potenciamos su pasión por los videojuegos en vías que cultivan sus habilidades digitales. 💻🎮 ¡Descubre y crea con nosotros!</p>
         <p>
-            <strong>¡desarrolla en tu hijo las habilidades digitales de esta nueva era!</strong>
+            <strong>¡Prepáralo para la era digital mientras se divierte y aprende!</strong>
         </p>
         <a href="#classes" class="cta-button">Reserva ahora</a>
     </section>
@@ -44,7 +45,7 @@
         <div>
             <img src="./images/Programmieren_mit_Scratch.jpg" alt="" width="400px">
         </div>
-        <p>Descubre cómo tus hijos pueden convertir sus videojuegos favoritos, como Scratch, Roblox y Minecraft, en
+        <p>Descubre cómo tus hijos pueden convertir su interés por videojuegos como Roblox y Minecraft, en
             herramientas de aprendizaje y práctica para entender los fundamentos de la programación.</p>
         <ul>
             <li>Prepáralos para el futuro digital.</li>
@@ -53,39 +54,40 @@
             <li>Conecta sus hobbies con el ámbito académico.</li>
             <li>Ofrecemos un entorno seguro y supervisado en línea.</li>
         </ul>
+        <a class="mt-2 cta-button" href="#plans">Ver planes disponibles</a>
     </section>
 
     <section id="classes">
         <h2>Cursos de programación</h2>
-        <p>No dejes pasar esta emocionante oportunidad. Reserva ahora y asegura un lugar para tus hijos en nuestros
-            cursos de programación. No olvides que podemos crear cursos de acuerdo a tus necesidades.</p>
-        <div class="carrousel">
+        <p>No dejes pasar esta emocionante oportunidad. Reserva ahora y <span class="big red">aprovecha el descuento de introducción de <span class="bigger">30%</span>,</span> 
+            ayuda a tus hijos a descubrir sus talentos digitales, y dales herramientas para esta nueva era. No olvides que podemos crear cursos personalizados de acuerdo a tus necesidades.</p>
+        <div class="carrousel" id="plans">
             <div class="carrousel-item">
                 <img src="./images/scratch-course.svg" alt="">
             </div>
-            <div class="carrousel-item">
+            <!-- <div class="carrousel-item">
                 <img src="./images/minecraft-course" alt="">
             </div>
             <div class="carrousel-item">
                 <img src="" alt="">
-            </div>
+            </div> -->
         </div>
-        <p>Clases disponibles (horas aproximadas):</p>
-        <ul>
+        <h3>Clases disponibles (horas aproximadas):</h3>
+        <ul class="mt-2">
             <li>
                 <a href="./curriculum/intro-to-programming.html" target="_blank">
-                    Introducción a la programación con Scratch (~10h)
+                    Introducción a la programación con Scratch (~15h)
                 </a>
             </li>
             <li>
                 <a href="./curriculum/game-programming.html" target="_blank">
-                    Desarrollo de juegos en Roblox (~12h)
+                    Desarrollo de juegos en Roblox (~17h)
                 </a>
             </li>
             <li>
                 <a href="./curriculum/3d-game-development.html" target="_blank">
 
-                    Desarrollo de juegos 3d con Godot (~12h)
+                    Desarrollo de juegos 3d con Godot (~20h)
                 </a>
             </li>
         </ul>
@@ -103,7 +105,7 @@
             ¡Estamos aquí para ayudarte!</p>
 
         <a class="cta-button"
-            href="mailto:jjesusrebollar@hotmail.com?Subject=Me%20interesan%20las%20clases%20de%20programación&body=Hola,%20me%20interesan%20las%20clases%20de%20programación%20que%20ofrece,%20quisiera%20que%20me%20mande%20más%20información%20a%20este%20correo%20o%20al%20teléfono%20%3Cinserte%20número%20de%20contacto%3E.%20Gracias.">
+            href="mailto:contacto@jesusrebollar.com?Subject=Me%20interesan%20las%20clases%20de%20programación&body=Hola,%20me%20interesan%20las%20clases%20de%20programación%20que%20ofrece,%20quisiera%20que%20me%20mande%20más%20información%20a%20este%20correo%20o%20al%20teléfono%20%3Cinserte%20número%20de%20contacto%3E.%20Gracias.">
             Enviar un correo
         </a>
         <div class="avatar">
