--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section id="about">
-        <h2>¡Hola, padres y madres amantes de la tecnología!</h2>
+        <h2>¡Hola, padres entusiastas del aprendizaje y la diversión!👋🧡</h2>
         <p>¿Sabías que tus hijos pueden aprender a programar de manera divertida y emocionante, sin salir de casa?</p>
         <div>
             <img src="./images/Programmieren_mit_Scratch.jpg" alt="" width="400px">
@@ -59,7 +59,7 @@
 
     <section id="classes">
         <h2>Cursos de programación</h2>
-        <p>No dejes pasar esta emocionante oportunidad. Reserva ahora y <span class="big red">aprovecha el descuento de introducción de <span class="bigger">30%</span>,</span> 
+        <p>Recuerda que todos nuestros cursos tienen la opción de ser en inglés. no dejes pasar esta emocionante oportunidad. Reserva ahora y <span class="big red">aprovecha el descuento de introducción de <span class="bigger">30%</span>,</span> 
             ayuda a tus hijos a descubrir sus talentos digitales, y dales herramientas para esta nueva era. No olvides que podemos crear cursos personalizados de acuerdo a tus necesidades.</p>
         <div class="carrousel" id="plans">
             <div class="carrousel-item">
