google tag manager

--- a/curriculum/intro-to-programming.html
+++ b/curriculum/intro-to-programming.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Plan de Estudios: Introducción a la Programación con Scratch</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4SMVD7QL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-2G4SMVD7QL');
+</script>
+
 <body>
   <h1>Introducción a la Programación con Scratch</h1>
-  
+
   <h2>Detalles de la Clase</h2>
   <ul>
     <li>Duración: 15 horas</li>
   </ul>
-  
+
   <h2>Descripción de la Clase</h2>
   <p>
-    Esta clase introduce a los estudiantes al emocionante mundo de la programación a través de Scratch, un lenguaje de programación visual. Aprenderán los fundamentos de la programación mientras crean historias interactivas, juegos y proyectos creativos. Con la interfaz amigable de Scratch, los estudiantes pueden arrastrar y soltar bloques para codificar sus proyectos y dar vida a sus ideas.
+    Esta clase introduce a los estudiantes al emocionante mundo de la programación a través de Scratch, un lenguaje de
+    programación visual. Aprenderán los fundamentos de la programación mientras crean historias interactivas, juegos y
+    proyectos creativos. Con la interfaz amigable de Scratch, los estudiantes pueden arrastrar y soltar bloques para
+    codificar sus proyectos y dar vida a sus ideas.
   </p>
-  
+
   <h2>Plan de Estudios</h2>
-  
+
   <h3>1. Introducción a Scratch (4 horas)</h3>
   <ul>
     <li>Visión general de la interfaz y características de Scratch</li>
@@ -25,7 +39,7 @@
     <li>Creación y animación de sprites</li>
     <li>Introducción a la programación basada en eventos</li>
   </ul>
-  
+
   <h3>2. Creación de Historias Interactivas (4 horas)</h3>
   <ul>
     <li>Agregar entrada del usuario mediante eventos de teclado y ratón</li>
@@ -33,7 +47,7 @@
     <li>Agregar sonido y música al proyecto</li>
     <li>Compartir y presentar las historias creadas con Scratch</li>
   </ul>
-  
+
   <h3>3. Desarrollo de Juegos con Scratch (4 horas)</h3>
   <ul>
     <li>Introducción a los principios del diseño de juegos</li>
@@ -41,7 +55,7 @@
     <li>Agregar puntuación, vidas y otras mecánicas de juego</li>
     <li>Pruebas y depuración de juegos</li>
   </ul>
-  
+
   <h3>4. Proyectos Creativos con Scratch (3 horas)</h3>
   <ul>
     <li>Fomentar la creatividad a través de proyectos abiertos</li>
@@ -49,6 +63,7 @@
     <li>Exploración de funciones y extensiones avanzadas de Scratch</li>
     <li>Mostrar y compartir proyectos creativos</li>
   </ul>
-  
+
 </body>
+
 </html>
