--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4SMVD7QL"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2G4SMVD7QL');
+</script>
 
 <body>
     <header>
@@ -29,10 +38,11 @@
         <div id="avatar">
             <a href="#about">
                 <img src="./images/ad-primer grado.png" class="svg"
-                alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
+                    alt="portada del curso de programación, asemejandose a un libro de texto" width="400px">
             </a>
         </div>
-        <p><strong>¡Clases de programación en línea a medida</strong> para niños de 8 a 12 años! Potenciamos su pasión por los videojuegos en vías que cultivan sus habilidades digitales. 💻🎮 ¡Descubre y crea con nosotros!</p>
+        <p><strong>¡Clases de programación en línea a medida</strong> para niños de 8 a 12 años! Potenciamos su pasión
+            por los videojuegos en vías que cultivan sus habilidades digitales. 💻🎮 ¡Descubre y crea con nosotros!</p>
         <p>
             <strong>¡Prepáralo para la era digital mientras se divierte y aprende!</strong>
         </p>
@@ -59,8 +69,11 @@
 
     <section id="classes">
         <h2>Cursos de programación</h2>
-        <p>Recuerda que todos nuestros cursos tienen la opción de ser en inglés. no dejes pasar esta emocionante oportunidad. Reserva ahora y <span class="big red">aprovecha el descuento de introducción de <span class="bigger">30%</span>,</span> 
-            ayuda a tus hijos a descubrir sus talentos digitales, y dales herramientas para esta nueva era. No olvides que podemos crear cursos personalizados de acuerdo a tus necesidades.</p>
+        <p>Recuerda que todos nuestros cursos tienen la opción de ser en inglés. no dejes pasar esta emocionante
+            oportunidad. Reserva ahora y <span class="big red">aprovecha el descuento de introducción de <span
+                    class="bigger">30%</span>,</span>
+            ayuda a tus hijos a descubrir sus talentos digitales, y dales herramientas para esta nueva era. No olvides
+            que podemos crear cursos personalizados de acuerdo a tus necesidades.</p>
         <div class="carrousel" id="plans">
             <div class="carrousel-item">
                 <img src="./images/scratch-course.svg" alt="">
