--- a/curriculum/3d-game-development.html
+++ b/curriculum/3d-game-development.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Plan de Estudios: Desarrollo de un Juego de Plataformas en Tercera Persona en 3D con Godot</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4SMVD7QL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-2G4SMVD7QL');
+</script>
+
 <body>
   <h1>Desarrollo de un Juego de Plataformas en Tercera Persona en 3D con Godot</h1>
-  
+
   <h2>Detalles de la Clase</h2>
   <ul>
     <li>Duración: 20 horas</li>
   </ul>
-  
+
   <h2>Descripción de la Clase</h2>
   <p>
-    Esta clase se enfoca en el desarrollo de un juego de plataformas en tercera persona en 3D utilizando Godot. Los estudiantes aprenderán los conceptos clave del desarrollo de juegos de plataformas en 3D, incluyendo la creación de entornos 3D, la programación de movimientos de personajes, la implementación de mecánicas de salto y el diseño de niveles desafiantes. Al final de la clase, los estudiantes habrán creado su propio juego de plataformas en tercera persona en 3D utilizando Godot y habrán adquirido una comprensión sólida de los aspectos fundamentales del desarrollo de juegos en 3D.
+    Esta clase se enfoca en el desarrollo de un juego de plataformas en tercera persona en 3D utilizando Godot. Los
+    estudiantes aprenderán los conceptos clave del desarrollo de juegos de plataformas en 3D, incluyendo la creación de
+    entornos 3D, la programación de movimientos de personajes, la implementación de mecánicas de salto y el diseño de
+    niveles desafiantes. Al final de la clase, los estudiantes habrán creado su propio juego de plataformas en tercera
+    persona en 3D utilizando Godot y habrán adquirido una comprensión sólida de los aspectos fundamentales del
+    desarrollo de juegos en 3D.
   </p>
-  
+
   <h2>Plan de Estudios</h2>
-  
+
   <h3>1. Introducción a Godot y Diseño del Juego de Plataformas en 3D (4 horas)</h3>
   <ul>
     <li>Visión general de Godot y sus características para juegos de plataformas en 3D</li>
@@ -25,7 +41,7 @@
     <li>Diseño del entorno y los elementos del juego</li>
     <li>Creación de una estructura básica del proyecto en Godot</li>
   </ul>
-  
+
   <h3>2. Creación de Entornos y Diseño de Niveles en 3D (5 horas)</h3>
   <ul>
     <li>Creación de entornos 3D utilizando el editor de Godot</li>
@@ -33,7 +49,7 @@
     <li>Diseño de niveles y colocación de plataformas y obstáculos en el entorno 3D</li>
     <li>Implementación de iluminación y efectos visuales</li>
   </ul>
-  
+
   <h3>3. Programación de Movimientos de Personajes (5 horas)</h3>
   <ul>
     <li>Creación de un personaje jugable en tercera persona</li>
@@ -41,7 +57,7 @@
     <li>Implementación de mecánicas de escalada, agacharse o deslizarse</li>
     <li>Programación de interacciones con el entorno, como agarre de bordes o activación de interruptores</li>
   </ul>
-  
+
   <h3>4. Implementación de Mecánicas de Juego y Diseño de Niveles Desafiantes (6 horas)</h3>
   <ul>
     <li>Implementación de mecánicas adicionales, como recolección de objetos o ataques</li>
@@ -50,4 +66,5 @@
     <li>Pruebas y ajustes finales del juego/li>
   </ul>
 </body>
+
 </html>
