--- a/curriculum/game-programming.html
+++ b/curriculum/game-programming.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Plan de Estudios: Desarrollo de Juegos con Roblox</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2G4SMVD7QL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-2G4SMVD7QL');
+</script>
+
 <body>
   <h1>Desarrollo de Juegos con Roblox</h1>
-  
+
   <h2>Detalles de la clase</h2>
   <ul>
     <li>Duración: 17 horas</li>
   </ul>
-  
+
   <h2>Descripción de la Clase</h2>
   <p>
-    Esta clase introduce a los estudiantes al emocionante mundo del desarrollo de juegos con Roblox. Aprenderán a utilizar Roblox Studio, la herramienta de creación de juegos de Roblox, y el lenguaje de programación Lua para crear y personalizar sus propios juegos. Los estudiantes podrán construir entornos de juego, diseñar mecánicas de juego, y compartir sus creaciones con otros jugadores en la plataforma de Roblox, sacandole provecho a sus hobies.
+    Esta clase introduce a los estudiantes al emocionante mundo del desarrollo de juegos con Roblox. Aprenderán a
+    utilizar Roblox Studio, la herramienta de creación de juegos de Roblox, y el lenguaje de programación Lua para crear
+    y personalizar sus propios juegos. Los estudiantes podrán construir entornos de juego, diseñar mecánicas de juego, y
+    compartir sus creaciones con otros jugadores en la plataforma de Roblox, sacandole provecho a sus hobies.
   </p>
-  
+
   <h2>Plan de Estudios</h2>
-  
+
   <h3>1. Introducción a Roblox Studio (3 horas)</h3>
   <ul>
     <li>Visión general de la interfaz y características de Roblox Studio</li>
@@ -25,7 +39,7 @@
     <li>Creación y manipulación de objetos en el mundo del juego</li>
     <li>Introducción a la programación con Lua en Roblox</li>
   </ul>
-  
+
   <h3>2. Creación de Entornos de Juego (2 horas)</h3>
   <ul>
     <li>Construcción y diseño de entornos de juego utilizando Roblox Studio</li>
@@ -33,7 +47,7 @@
     <li>Aplicación de texturas y materiales a los objetos</li>
     <li>Creación de elementos interactivos en el entorno</li>
   </ul>
-  
+
   <h3>3. Programación en Roblox (4 horas)</h3>
   <ul>
     <li>Introducción a la programación con Lua en Roblox</li>
@@ -41,15 +55,16 @@
     <li>Escritura de scripts para controlar objetos y comportamientos del juego</li>
     <li>Depuración y prueba de scripts en Roblox</li>
   </ul>
-  
+
   <h3>4. Mecánicas de Juego e Interacciones (4 horas)</h3>
   <ul>
-    <li>Diseño e implementación de mecánicas de juego (por ejemplo, movimiento del jugador, detección de colisiones)</li>
+    <li>Diseño e implementación de mecánicas de juego (por ejemplo, movimiento del jugador, detección de colisiones)
+    </li>
     <li>Creación de elementos interactivos (por ejemplo, botones, interruptores, puertas)</li>
     <li>Implementación de sistemas de puntuación y retroalimentación para el jugador</li>
     <li>Pruebas y mejora de las mecánicas de juego</li>
   </ul>
-  
+
   <h3>5. Desarrollo Avanzado de Juegos (4 horas)</h3>
   <ul>
     <li>Exploración de funciones y técnicas avanzadas de Roblox</li>
@@ -57,6 +72,7 @@
     <li>Creación de interfaces de usuario y menús de juego</li>
     <li>Publicación y compartición de juegos en Roblox</li>
   </ul>
-  
+
 </body>
+
 </html>
